motor/ auton fixes
jbkj